--- a/style.css
+++ b/style.css
@@ -3,3 +3,51 @@ body {
     color: white;
     font-family: "Montserrat", sans-serif;
 }
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+
+th {
+    background-color: #292929;
+    font-weight: bold;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #202020;
+}
+
+.first{
+    display: flex;
+    flex-direction: column;
+}
+
+#datasetSelect {
+    width: 200px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+    font-size: 16px; 
+    color: #333; 
+    appearance: none;
+    outline: none;
+    cursor: pointer;
+}
+#datasetSelectContainer {
+    width: 200px;
+    height: 50px;
+}
